--- a/index.html
+++ b/index.html
@@ -804,7 +804,7 @@
               <div class="about-us__top-img">
                 <img src="images/about-us-bg1.jpg.webp" alt="">
               </div>
-              <div class="about-us__top-text">
+              <div class="about-us__top-text about-us__top-text--1">
                 <p>
                   <span>INNOMA.VC</span> - Международное аналитическое агентство по запуску IT бизнеса на локальных
                   рынках регионов Азии, Ближнего
@@ -814,6 +814,11 @@
                 получить
                 необходимые знания и пакеты документов, чтобы успешно запустить свой продукт на международных рынках.
               </div>
+              <div class="about-us__top-text about-us__top-text--2"><span>Иннома</span> - международное аналитическое
+                агентство направленное на помощь стартапам в в поиске инвесторов, партнеров в
+                регионах Ближнего Востока и Юго-Восточной Азии
+                Нашей командой пройдено более 20 акселераторов, бизнес инкубаторов и мы знаем как сделать продукт
+                эффективным для вас</div>
             </div>
             <div class="about-us__founder">
               <div class="about-us__founder-img">
@@ -823,7 +828,7 @@
                 Всем привет! <br> Меня зовут Роман. Последние 6 лет я являюсь частью <br>
                 инновационной экосистемы СНГ, прошел путь от проектного
                 менеджера до руководителя продукта по автоматизированному скаутингу и скорингу стартапов. За 6 лет
-                работы я увидел
+                работы я увидел <br>
                 множество ошибок и отсутствие ориентации акселерационных программ под запросы стартапов. Все
                 акселераторы выполнялись
                 ради <br> акселераторв и выполнения КПЭ.
@@ -833,38 +838,38 @@
                 </div>
               </div>
             </div>
-            <div class="about-us__slider">
-              <div class="about-us__slider-item">
-                <img src="images/about-us-slide1.webp" alt="">
-              </div>
-              <div class="about-us__slider-item">
-                <img src="images/about-us-slide2.webp" alt="">
-              </div>
-              <div class="about-us__slider-item">
-                <img src="images/about-us-slide3.webp" alt="">
-              </div>
-              <div class="about-us__slider-item">
-                <img src="images/about-us-slide4.webp" alt="">
-              </div>
-              <div class="about-us__slider-item">
-                <img src="images/about-us-slide5.webp" alt="">
-              </div>
-              <div class="about-us__slider-item">
-                <img src="images/about-us-slide1.webp" alt="">
-              </div>
-              <div class="about-us__slider-item">
-                <img src="images/about-us-slide2.webp" alt="">
-              </div>
-              <div class="about-us__slider-item">
-                <img src="images/about-us-slide3.webp" alt="">
-              </div>
-              <div class="about-us__slider-item">
-                <img src="images/about-us-slide4.webp" alt="">
-              </div>
-              <div class="about-us__slider-item">
-                <img src="images/about-us-slide5.webp" alt="">
-              </div>
-            </div>
+          </div>
+        </div>
+        <div class="about-us__slider">
+          <div class="about-us__slider-item">
+            <img src="images/about-us-slide1.webp" alt="">
+          </div>
+          <div class="about-us__slider-item">
+            <img src="images/about-us-slide2.webp" alt="">
+          </div>
+          <div class="about-us__slider-item">
+            <img src="images/about-us-slide3.webp" alt="">
+          </div>
+          <div class="about-us__slider-item">
+            <img src="images/about-us-slide4.webp" alt="">
+          </div>
+          <div class="about-us__slider-item">
+            <img src="images/about-us-slide5.webp" alt="">
+          </div>
+          <div class="about-us__slider-item">
+            <img src="images/about-us-slide1.webp" alt="">
+          </div>
+          <div class="about-us__slider-item">
+            <img src="images/about-us-slide2.webp" alt="">
+          </div>
+          <div class="about-us__slider-item">
+            <img src="images/about-us-slide3.webp" alt="">
+          </div>
+          <div class="about-us__slider-item">
+            <img src="images/about-us-slide4.webp" alt="">
+          </div>
+          <div class="about-us__slider-item">
+            <img src="images/about-us-slide5.webp" alt="">
           </div>
         </div>
       </section>
