--- a/index.html
+++ b/index.html
@@ -978,7 +978,7 @@
             <p class="becom-partner__text">Если вы или ваш бизнес может быть полезен IT командам при выходе на
               международные рынки, приглашем вас стать нашим
               партнером</p>
-            <a class="button-blue" href="#">Стать партнером</a>
+            <a class="button-blue becom-partner__btn" href="#">Стать партнером</a>
           </div>
         </div>
       </section>
