--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
 <body>
   <div class="wrapper">
     <div class="overlay"></div>
+    <div class="pop-up__container">
+      <div class="pop-up__inner">
+        <p class="pop-up__title">Вход</p>
+        <a class="pop-up__close" href="#"><span></span></a>
+        <input class="pop-up__input" type="email" placeholder="Е-маил">
+        <input class="pop-up__input" type="text" placeholder="Пароль">
+        <button class="pop-up__btn button-green">Войти</button>
+        <a class="pop-up__link" href="#">Зарегистрироваться</a>
+      </div>
+    </div>
     <header class="header" id="header">
       <div class="header__top">
         <div class="container">
